# api-myhome/src/controllers/reservation.controller.js
@@ -1,6 +1,7 @@
 let instance = null;
 require("dotenv").config();
 const ReservationService = require("../services/reservation.service");
+const RealtorService = require("../services/realtor.service");
 const ListingService = require("../services/listings.service");
 
 class ReservationController {
@@ -14,15 +15,19 @@ class ReservationController {
   async getReservationsByUserId(req, res, next) {
     const { userId } = req.params;
     try {
-      const reservations = await ReservationService.getReservationsByUserId(userId);
-  
+      const reservations = await ReservationService.getReservationsByUserId(
+        userId
+      );
+
       // Obtener detalles de propiedades para cada reserva de manera sincrónica
       const reservationsWithDetails = [];
       for (const reservation of reservations) {
-        const listingDetails = await ListingService.getListingById(reservation.listingId);
+        const listingDetails = await ListingService.getListingById(
+          reservation.listingId
+        );
         reservationsWithDetails.push({ ...reservation._doc, listingDetails });
       }
-  
+
       return res.status(200).json(reservationsWithDetails);
     } catch (err) {
       console.error(err);
@@ -38,10 +43,12 @@ class ReservationController {
       );
       const reservationsWithDetails = [];
       for (const reservation of reservations) {
-        const listingDetails = await ListingService.getListingById(reservation.listingId);
+        const listingDetails = await ListingService.getListingById(
+          reservation.listingId
+        );
         reservationsWithDetails.push({ ...reservation._doc, listingDetails });
       }
-  
+
       return res.status(200).json(reservationsWithDetails);
     } catch (err) {
       console.error(err);
@@ -56,6 +63,19 @@ class ReservationController {
         listingId
       );
       return res.status(200).json(reservations);
+    } catch (err) {
+      console.error(err);
+      next(err);
+    }
+  }
+
+  async getReservationById(req, res, next) {
+    const { reservationId } = req.params;
+    try {
+      const reservation = await ReservationService.getReservationById(
+        reservationId
+      );
+      return res.status(200).json(reservation);
     } catch (err) {
       console.error(err);
       next(err);
@@ -93,6 +113,32 @@ class ReservationController {
     try {
       await ReservationService.deleteReservation(reservationId);
       return res.status(204).json();
+    } catch (err) {
+      console.error(err);
+      next(err);
+    }
+  }
+
+  async reviewReservation(req, res, next) {
+    try {
+      const { reservationId } = req.params;
+      const review = req.body;
+
+      const reservation = await ReservationService.getReservationById(
+        reservationId
+      );
+
+      if (reservation.wasReviewed) {
+        return res
+          .status(400)
+          .json({ message: "La reserva ya fue calificada" });
+      }
+
+      review.userId = reservation.userId;
+
+      await RealtorService.addReview(reservation.realtorId, review);
+      await ReservationService.markAsReviewed(reservationId);
+      return res.status(200).json();
     } catch (err) {
       console.error(err);
       next(err);
